// Copyright 2017 by PeopleWare n.v..
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// http://www.apache.org/licenses/LICENSE-2.0
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

using System;
using System.Runtime.Serialization;

namespace PPWCode.Vernacular.Exceptions.III
{
    /// <summary>
    /// The method that throws this error is a mutating method, flagged not to be used, because the instance is flagged
    /// as immutable.
    /// </summary>
    /// <remarks>
    /// MUDO This class is named wrong. Should be changed to Immutable_Error_. Create a new class, and deprecate this.
    /// </remarks>
    [Serializable]
    public class ImmutableException : ProgrammingError
    {
        public ImmutableException()
            : base(UnspecifiedProgrammingErrorMessage)
        {
        }

        public ImmutableException(string message)
            : base(message ?? UnspecifiedProgrammingErrorMessage)
        {
        }

        public ImmutableException(string message, Exception innerException)
            : base(message ?? (innerException == null ? UnspecifiedProgrammingErrorMessage : ExceptionWithProgrammingCauseMessage), innerException)
        {
        }

        protected ImmutableException(SerializationInfo info, StreamingContext context)
            : base(info, context)
        {
        }
    }
}
